# web-scout-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pipeline-diagram.excalidraw  pyproject.toml  test_judge.py  test_refined.py  test_scrape_gov.py
docs/: pipeline-flow.md
docs/superpowers/plans/: 2026-03-19-database-list-page-deepening.md  2026-03-19-robustness-fixes.md  2026-04-16-quality-benchmark.md  2026-04-16-quality-improvements.md  2026-04-20-interactive-browser-navigation.md  2026-04-21-pipeline-speed-optimisation.md  2026-04-21-spa-form-content-detection.md
docs/superpowers/specs/: 2026-03-19-database-list-page-deepening-design.md  2026-04-14-shared-url-scrape-cache-design.md  2026-04-16-quality-benchmark-design.md  2026-04-20-interactive-browser-navigation-design.md  2026-04-21-pipeline-speed-optimisation-design.md  2026-04-21-spa-form-content-detection-design.md
notebooks/: test_web_scout.ipynb
src/web_scout/: __init__.py  _extractor_contract.py  _heuristics.py  _page_classifier.py  _pipeline_flow.py  _pipeline_rules.py  _pipeline_types.py  _prompts.py  _setup.py  agent.py  config.py  models.py  scraping.py  search_backends.py  tools.py  utils.py
src/web_scout/scraping/: __init__.py  _crawler.py  _document.py  _download.py  _fetch_parse.py  _fetcher.py  _html.py  _image.py  _json.py  _markdown.py  _parser.py  _scrape_url.py  _scrapling.py  _vision.py  constants.py  context.py  executor.py  orchestrator.py  page_classifier.py  plan.py  strategy.py  types.py  utils.py
src/web_scout/tools/: __init__.py  extractor.py  outcomes.py  page_analysis.py  rendering.py  scraper.py  search.py  session_cache.py  tracker.py  types.py
tests/: README.md  benchmark.py  diverse_matrix_probe.py  full_query_probe.py  gmo_probe.py  matrix_probe.py  quality_benchmark.py  quality_probe.py  query_probe.py  run_checks.py  test_agent_helpers.py  test_cache_live.py  test_coverage_grounding.py  test_crawler.py  test_followup_reranker.py  test_hub_detection.py  test_interactive_tools.py  test_live_scraping.py  test_orchestrator.py  test_page_classifier.py  test_pipeline.py  test_pipeline_speed.py  test_quality_benchmark.py  test_scrape_tool_dedupe.py  test_scraping_routing.py  test_search_backends.py  test_spa_form_detection.py  test_synthesis_grounding.py  test_url_utils.py  validation_matrix_probe.py
tests/benchmark_results/: benchmark_20260312_141946.json  benchmark_20260312_141946.md  benchmark_20260316_085840.json  benchmark_20260316_085840.md  benchmark_20260316_093016.json  benchmark_20260316_093016.md  benchmark_20260316_093801.json  benchmark_20260316_093801.md  quality_benchmark_20260416_114728.json  quality_benchmark_20260416_114728.md  quality_benchmark_20260416_115225.json  quality_benchmark_20260416_115225.md  quality_benchmark_20260416_122713.json  quality_benchmark_20260416_122713.md  quality_benchmark_20260416_133953.json  quality_benchmark_20260416_133953.md  quality_benchmark_20260416_135425.json  quality_benchmark_20260416_135425.md
tests/probe_results/: direct_meteo_postfix.json  direct_meteo_reranked.json  direct_probe_20260414_live.json  diverse_matrix_probe_20260414_124519.json  diverse_matrix_probe_20260414_125336.json  diverse_matrix_probe_20260414_130817.json  diverse_matrix_probe_20260414_132957.json  full_query_probe_20260414_115757.json  full_query_probe_20260414_120224.json  full_query_probe_20260422_124241.json  full_query_probe_20260422_125308.json  gmo_probe_20260518_113656.json  gmo_probe_20260518_115432.json  gmo_probe_20260518_154418.json  matrix_probe_20260414_123336.json  matrix_probe_20260414_131915.json  meteo_domain_postfix.json  meteo_domain_reranked.json  meteo_domain_rerun.json  query_probe_20260414_115459.json  validation_matrix_probe_20260518_163939.json  validation_matrix_probe_20260518_171344.json  validation_matrix_probe_20260519_081809.partial.json  validation_matrix_probe_20260519_083546.json  validation_matrix_probe_20260519_084013.json
tests/run_results/20260422_083625/: manifest.json  summary.md  unit-fast.xml
tests/run_results/20260422_083704/: manifest.json  summary.md  unit-fast.xml
tests/run_results/20260422_124011/: manifest.json  summary.md  unit-fast.xml
tests/run_results/20260422_124923/: manifest.json  summary.md
tests/run_results/20260422_124934/: manifest.json  summary.md
tests/run_results/20260422_124943/: manifest.json  summary.md  unit-fast.xml
tests/run_results/20260512_101413/: manifest.json  summary.md  unit-all.xml
tests/run_results/20260512_101737/: full_query_probe_20260512_102907.json  summary.md  (+3 more)
(+18 files in other folders)
