[tool.poetry]
name = "web-scout-ai"
version = "1.3.0"
description = "Agentic web research tool — smarter than search, faster than deep research. Search, scrape, and synthesize web content using LLMs."
authors = ["Riccardo Soldan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RSO9192/web-scout-ai"
keywords = [
    "web-research", "ai-agent", "web-scraping", "llm", "search",
    "rag", "crawling", "document-extraction", "pdf-extraction",
    "playwright", "docling", "synthesis", "openai-agents",
    "serper", "duckduckgo", "litellm", "grounded-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
packages = [{ include = "web_scout", from = "src" }]

[tool.poetry.scripts]
web-scout-setup = "web_scout._setup:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.0"
httpx = ">=0.24"
openai-agents = ">=0.0.7"
scrapling = {version = ">=0.4.9", extras = ["fetchers"]}
markdownify = ">=0.11"
docling = ">=2.0"
docling-core = ">=2.0"
litellm = ">=1.30"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.4"
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# LLM prompt strings and Pydantic field descriptions in agent.py cannot be wrapped
# without changing the content sent to models.
"src/web_scout/agent.py" = ["E501"]
# Long function signatures in extractor/scraper are unavoidable given parameter counts.
"src/web_scout/tools/extractor.py" = ["E501"]
"src/web_scout/tools/scraper.py" = ["E501"]
# Long Pydantic field descriptions must not be wrapped.
"src/web_scout/tools/types.py" = ["E501"]
# Strategy and download modules have long log-format strings.
"src/web_scout/scraping/_download.py" = ["E501"]
"src/web_scout/scraping/executor.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
